; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo.c_vo_destroy.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo.c_vo_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.vo_internal* }
%struct.vo_internal = type { i32, i32 }

@terminate_vo = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vo_destroy(%struct.vo* %0) #0 {
  %2 = alloca %struct.vo*, align 8
  %3 = alloca %struct.vo_internal*, align 8
  store %struct.vo* %0, %struct.vo** %2, align 8
  %4 = load %struct.vo*, %struct.vo** %2, align 8
  %5 = getelementptr inbounds %struct.vo, %struct.vo* %4, i32 0, i32 0
  %6 = load %struct.vo_internal*, %struct.vo_internal** %5, align 8
  store %struct.vo_internal* %6, %struct.vo_internal** %3, align 8
  %7 = load %struct.vo_internal*, %struct.vo_internal** %3, align 8
  %8 = getelementptr inbounds %struct.vo_internal, %struct.vo_internal* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @terminate_vo, align 4
  %11 = load %struct.vo*, %struct.vo** %2, align 8
  %12 = call i32 @mp_dispatch_run(i32 %9, i32 %10, %struct.vo* %11)
  %13 = load %struct.vo*, %struct.vo** %2, align 8
  %14 = getelementptr inbounds %struct.vo, %struct.vo* %13, i32 0, i32 0
  %15 = load %struct.vo_internal*, %struct.vo_internal** %14, align 8
  %16 = getelementptr inbounds %struct.vo_internal, %struct.vo_internal* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @pthread_join(i32 %17, i32* null)
  %19 = load %struct.vo*, %struct.vo** %2, align 8
  %20 = call i32 @dealloc_vo(%struct.vo* %19)
  ret void
}

declare dso_local i32 @mp_dispatch_run(i32, i32, %struct.vo*) #1

declare dso_local i32 @pthread_join(i32, i32*) #1

declare dso_local i32 @dealloc_vo(%struct.vo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
